active Chats are being seen, by clicking opens smses in this chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
         <activity android:name=".authentification.LogInActivity">
 
         </activity>
+
+        <activity android:name=".LogedInActivities.chatWithFriend.chatWithFriendActivity">
+
+        </activity>
     </application>
 
 </manifest>
