--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-storage-ktx'
-
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
