--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
         <activity android:name=".LogedInActivities.chatWithFriend.chatWithFriendActivity">
 
         </activity>
+
+        <activity android:name=".LogedInActivities.FindFriends.FriendsActivity">
+
+        </activity>
     </application>
 
 </manifest>
